<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView android:id="@+id/first_name" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter_first_name"
            android:layout_below="@+id/first_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/first_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/last_name" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter_last_name"
            android:hint="@string/last_name" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:inputType="textMultiLine"
            android:ems="100"
            android:id="@+id/essay"
            android:hint="@string/letter"
            android:layout_below="@+id/enter_last_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit Reference"
            android:id="@+id/submit"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="100dp"
            android:layout_gravity="right"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_reference"
            android:id="@+id/submit_text"
            android:layout_below="@+id/essay"
            android:layout_toRightOf="@+id/textView"
            android:layout_above="@+id/textView"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_toLeftOf="@+id/submit"
            android:layout_toStartOf="@+id/submit"/>

    </LinearLayout>
</RelativeLayout>